[project]
name = "llm-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.4.1",
    "openai>=2.14.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "six>=1.17.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
